--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 let currentPage = 0;
 
 const content = [
-  `<h1 class="text-xl mt-4">Hello, User</h1>
+  `<h1 class="text-xl mt-4">Hello, World</h1>
   <div class="flex flex-col gap-2">
     <p>Welcome to a tour of the <a class="text-indigo-500" href="https://www.osohq.com/docs/oss/reference/polar.html">Polar authorization language.</a></p>
     <p>The tour is divided into a list of modules that you can access by clicking on <a class="text-indigo-500">A Tour of Polar</a> on the top left of the page.</p>
@@ -134,7 +134,7 @@ function updatePageDisplay() {
 async function runCode() {
   const code = cm.getValue();
   try {
-    const response = await fetch('/.netlify/functions/exec', {
+    const response = await fetch('/api/exec', {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json'
