--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://unpkg.com/codemirror@5.65.16/lib/codemirror.css">
   <script src="https://unpkg.com/codemirror@5.65.16/lib/codemirror.js"></script>
   <script src="https://unpkg.com/codemirror@5.65.16/mode/ruby/ruby.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/codemirror@5.65.16/theme/ruby-blue.css">
+  <script src="content.js"></script>
 
   <link rel="stylesheet" href="tw.css" />
 </head>
@@ -23,22 +23,22 @@
   <div class="flex flex-col h-screen w-screen">
     <header class="bg-indigo-600 text-white">
       <div class="px-4 py-2">
-        <h1 class="text-2xl font-bold"><img src="https://cdn.prod.website-files.com/5f148310b9588c295ed77f20/6222613fc7d2ef9b8b5312f8_logo-black.png" class="inline h-[1em] mr-1"> A Tour of Polar</h1>
+        <h1 class="text-2xl font-bold"><img src="https://www.osohq.com/docs/logo-bear-white.png" class="inline h-[1em] mr-1"> A Tour of Polar</h1>
       </div>
     </header>
     <div class="flex flex-1 w-screen">
-      <div class="w-1/2 border-r border-gray-100 p-4">
-        <div id="pageContent"></div>
-        <div class="mt-6 w-full flex gap-4 items-center">
+      <div class="w-1/2 border-r border-gray-100 p-4 h-full flex flex-col gap-6">
+        <div id="pageContent" class="flex-grow"></div>
+        <div class="w-full flex gap-4 items-center">
           <button onclick="previousPage()" class="bg-indigo-600 hover:bg-indigo-500 text-white px-4 py-2 rounded-md">&lt;</button>
-          <span class="text-gray-600" id="curPage">${currentPage + 1} / ${values.length}</span>
+          <span class="text-gray-600" id="curPage">${currentPage + 1} / ${content.length}</span>
           <button onclick="nextPage()" class="bg-indigo-600 hover:bg-indigo-500 text-white px-4 py-2 rounded-md">&gt;</button>
         </div>
       </div>
-      <div class="w-1/2 flex flex-col">
+      <div class="w-1/2 flex flex-col h-full">
         <div id="editor"></div>
         <div class="w-full bg-gray-100 p-3 flex justify-between">
-          <button onclick="runCode()" class="bg-indigo-600 hover:bg-indigo-500 text-white px-4 py-2 rounded-md">Run</button>
+          <button id="runButton" onclick="runCode()" class="bg-indigo-600 hover:bg-indigo-500 text-white px-4 py-2 rounded-md disabled:bg-slate-500">Run</button>
         </div>
         <div class="w-full flex-grow overflow-x-auto">
           <pre id="results" class="p-4"></pre>
@@ -51,89 +51,37 @@
 <script>
 let currentPage = 0;
 
-const content = [
-  `<h1 class="text-xl mt-4">Hello, World</h1>
-  <div class="flex flex-col gap-2">
-    <p>Welcome to a tour of the <a class="text-indigo-500" href="https://www.osohq.com/docs/oss/reference/polar.html">Polar authorization language.</a></p>
-    <p>The tour is divided into a list of modules that you can access by clicking on <a class="text-indigo-500">A Tour of Polar</a> on the top left of the page.</p>
-    <p>You can also view the table of contents at any time by clicking on the menu on the top right of the page.</p>
-    <p>Throughout the tour, you will find a series of slides and exercises to complete.</p>
-  </div>`,
-  `<h1 class="text-xl mt-4">Basic Rules</h1>
-  <div class="flex flex-col gap-2">
-    <p>Let's start with the basics of Polar rules and permissions.</p>
-    <p>On the right you'll see an example of a simple policy that gives members viewing permissions on organizations.</p>
-    <p>Try running the code to see how it works! You should see an assertion error. You can fix the assertion error by adding <pre>has_role(User{"alice"}, "member", Organization{"acme"});</pre></p>
-  </div>`
-];
-
-const values = [
-`
-actor User {}
-resource Organization {}
-
-# Members can view organizations
-has_permission(user: User, "view", organization: Organization) if
-  has_role(user, "member", organization);
-
-has_role(User{"alice"}, "member", Organization{"acme"});
-`,
-`
-actor User {}
-resource Organization {}
-
-# Members can view organizations
-has_permission(user: User, "view", organization: Organization) if
-  has_role(user, "member", organization);
-
-# Admins can edit organizations
-has_permission(user: User, "edit", organization: Organization) if
-  has_role(user, "admin", organization);
-
-# Admins inherit all permissions from members
-has_role(user: User, "member", organization: Organization) if
-  has_role(user, "admin", organization);
-
-test "Alice can view Acme" {
-  assert has_permission(User{"alice"}, "view", Organization{"acme"});
-}
-`
-];
-
-var cm = CodeMirror(document.getElementById("editor"), {
-  value: values[currentPage],
-  lineNumbers: true,
-  lineWrapping: true,
-  tabSize: 2,
-  autofocus: true,
-  mode: "ruby"
-});
-
 function previousPage() {
   if (currentPage > 0) {
     currentPage--;
-    cm.setValue(values[currentPage]);
-    document.getElementById('pageContent').innerHTML = content[currentPage];
+    cm.setValue(content[currentPage].code);
+    document.getElementById('pageContent').innerHTML = content[currentPage].text;
     updatePageDisplay();
+    history.pushState(null, '', currentPage === 0 ? '/' : `/${currentPage + 1}`);
   }
 }
 
 function nextPage() {
-  if (currentPage < values.length - 1) {
+  if (currentPage < content.length - 1) {
     currentPage++;
-    cm.setValue(values[currentPage]);
-    document.getElementById('pageContent').innerHTML = content[currentPage];
+    cm.setValue(content[currentPage].code.trim());
+    document.getElementById('pageContent').innerHTML = content[currentPage].text;
     updatePageDisplay();
+    history.pushState(null, '', `/${currentPage + 1}`);
   }
 }
 
 function updatePageDisplay() {
-  document.querySelector('#curPage').textContent = `${currentPage + 1} / ${values.length}`;
+  document.querySelector('#curPage').textContent = `${currentPage + 1} / ${content.length}`;
 }
 
 async function runCode() {
+  const runButton = document.getElementById('runButton');
+  runButton.disabled = true;
   const code = cm.getValue();
+  const results = document.getElementById('results');
   try {
+    results.innerHTML = '<div class="animate-spin h-5 w-5 border-2 border-indigo-600 border-t-transparent rounded-full mx-auto"></div>';
     const response = await fetch('/api/exec', {
       method: 'POST',
       headers: {
@@ -144,18 +92,42 @@ async function runCode() {
     const result = await response.json();
     let displayResult = 'Policy executed successfully';
     if (result.error) {
-      const data = JSON.parse(result.error.slice(result.error.indexOf('['), result.error.lastIndexOf(']') + 1));
-      displayResult = data.map(err => err.error_type + ': ' + err.message).join('\n\n');
+      try {
+        const data = JSON.parse(result.error.slice(result.error.indexOf('['), result.error.lastIndexOf(']') + 1));
+        displayResult = data.map(err => err.error_type + ': ' + err.message).join('\n\n');
+      } catch(err) {
+        displayResult = result.error;
+      }
     }
-    document.getElementById('results').textContent = displayResult;
+    results.textContent = displayResult;
   } catch (error) {
-    document.getElementById('results').textContent = 'Error: ' + error.message;
+    results.textContent = 'Error: ' + error.message;
+  } finally {
+    runButton.disabled = false;
   }
+}
+// Get page from URL
+const path = window.location.pathname;
+currentPage = path === '/' ? 0 : parseInt(path.slice(1)) - 1;
+if (Number.isNaN(currentPage)) {
+  currentPage = 0;
 }
 
 // Initialize page display and content
-document.getElementById('pageContent').innerHTML = content[currentPage];
+document.getElementById('pageContent').innerHTML = content[currentPage].text;
 updatePageDisplay();
+
+// Set initial URL
+history.replaceState(null, '', currentPage === 0 ? '/' : `/${currentPage + 1}`);
+
+var cm = CodeMirror(document.getElementById("editor"), {
+  value: content[currentPage].code.trim(),
+  lineNumbers: true,
+  lineWrapping: true,
+  tabSize: 2,
+  autofocus: true,
+  mode: "ruby"
+});
 </script>
 
 </html>
