--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,15 @@
   <script src="https://unpkg.com/codemirror@5.65.16/mode/ruby/ruby.js"></script>
   <script src="content.js"></script>
 
+  <style>
+    .CodeMirror { height: 100%; }
+    #drag-bar {
+      padding: 3px;
+      cursor: row-resize;
+      background-color: silver;
+    }
+  </style>
+
   <link rel="stylesheet" href="tw.css" />
 </head>
 
@@ -27,7 +36,7 @@
       </div>
     </header>
     <div class="flex flex-1 w-screen">
-      <div class="w-1/2 border-r border-gray-100 p-4 h-full flex flex-col gap-6">
+      <div class="w-1/2 border-r border-gray-100 p-4 flex flex-col gap-6">
         <div id="pageContent" class="flex-grow"></div>
         <div class="w-full flex gap-4 items-center">
           <button onclick="previousPage()" class="bg-indigo-600 hover:bg-indigo-500 text-white px-4 py-2 rounded-md">&lt;</button>
@@ -35,13 +44,14 @@
           <button onclick="nextPage()" class="bg-indigo-600 hover:bg-indigo-500 text-white px-4 py-2 rounded-md">&gt;</button>
         </div>
       </div>
-      <div class="w-1/2 flex flex-col h-full">
-        <div id="editor"></div>
-        <div class="w-full bg-gray-100 p-3 flex justify-between">
-          <button id="runButton" onclick="runCode()" class="bg-indigo-600 hover:bg-indigo-500 text-white px-4 py-2 rounded-md disabled:bg-slate-500">Run</button>
-        </div>
-        <div class="w-full flex-grow overflow-x-auto">
-          <pre id="results" class="p-4"></pre>
+      <div class="w-1/2 flex flex-col h-[calc(100vh-48px)] overflow-hidden">
+        <div id="editor" class="h-1/2"></div>
+        <div id="drag-bar"></div>
+        <div class="w-full h-1/2">
+          <div class="w-full bg-gray-100 p-3 flex justify-between">
+            <button id="runButton" onclick="runCode()" class="bg-indigo-600 hover:bg-indigo-500 text-white px-4 py-2 rounded-md disabled:bg-slate-500">Run</button>
+          </div>
+          <pre id="results" class="p-4 h-[calc(100%-64px)] overflow-y-auto"></pre>
         </div>
       </div>
     </div>
@@ -106,6 +116,7 @@ async function runCode() {
     runButton.disabled = false;
   }
 }
+
 // Get page from URL
 const path = window.location.pathname;
 currentPage = path === '/' ? 0 : parseInt(path.slice(1)) - 1;
@@ -127,6 +138,45 @@ var cm = CodeMirror(document.getElementById("editor"), {
   tabSize: 2,
   autofocus: true,
   mode: "ruby"
+});
+
+// Drag bar functionality
+window.addEventListener('DOMContentLoaded', () => {
+  const dragBar = document.getElementById('drag-bar');
+  const editorDiv = document.getElementById('editor');
+  const resultsDiv = document.getElementById('results').parentElement;
+  let isDragging = false;
+  let initialMouseY = 0;
+  let initialEditorHeight = 0;
+
+  dragBar.addEventListener('mousedown', (e) => {
+    e.preventDefault();
+    isDragging = true;
+    initialMouseY = e.clientY || e.pageY;
+    initialEditorHeight = editorDiv.offsetHeight;
+  });
+
+  document.addEventListener('mousemove', (e) => {
+    if (isDragging) {
+      const mouseY = e.clientY || e.pageY;
+      const containerTop = editorDiv.parentElement.offsetTop;
+      const containerHeight = editorDiv.parentElement.offsetHeight;
+
+      const mouseMovementY = mouseY - initialMouseY;
+      const newEditorHeight = Math.max(initialEditorHeight + mouseMovementY, 0);
+
+      const editorHeight = (newEditorHeight / containerHeight) * 100;
+      const resultsHeight = 100 - editorHeight;
+
+      editorDiv.style.height = `${editorHeight}%`;
+      resultsDiv.style.height = `${resultsHeight}%`;
+      cm.refresh();
+    }
+  });
+
+  document.addEventListener('mouseup', () => {
+    isDragging = false;
+  });
 });
 </script>
 
