--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@ function previousPage() {
   } else {
     return;
   }
-  updatePage();
+  updatePage(true);
 }
 
 function nextPage() {
@@ -97,17 +97,20 @@ function nextPage() {
   } else {
     return;
   }
-  updatePage();
+  updatePage(true);
 }
 
-function updatePage() {
+function updatePage(pushState) {
   const page = content[currentChapter][currentPage];
   cm.setValue(page.code.trim());
   document.getElementById('pageContent').innerHTML = page.text;
   document.getElementById('results').innerHTML = '<img src="https://cdn.prod.website-files.com/5f1483105c9a72fd0a3b662a/6793da36f7a5080d73228681_File%20Sharing%20Bear.png" class="absolute bottom-0 h-48 left-1/2 -translate-x-1/2">';
   updatePageDisplay();
   const chapterSlug = chapterSlugs[currentChapter];
-  history.pushState(null, '', `/${chapterSlug}/${currentPage + 1}`);
+  if (pushState) {
+    history.pushState(null, '', `/${chapterSlug}/${currentPage + 1}`);
+  }
+  cm.focus();
 }
 
 function updatePageDisplay() {
@@ -170,13 +173,45 @@ updatePageDisplay();
 const initialChapterSlug = chapterSlugs[currentChapter];
 history.replaceState(null, '', `/${initialChapterSlug}/${currentPage + 1}`);
 
+window.addEventListener('popstate', () => {
+  const path = window.location.pathname;
+  if (path !== '/') {
+    const [, chapterSlug, pageNum] = path.split('/');
+    const chapter = Object.keys(content).find(c => chapterSlugs[c] === chapterSlug);
+    if (chapter) {
+      currentChapter = chapter;
+      currentPage = parseInt(pageNum) - 1;
+      if (isNaN(currentPage) || currentPage < 0 || currentPage >= content[currentChapter].length) {
+        currentPage = 0;
+      }
+      updatePage();
+    }
+  }
+});
+
+// Add page up/down handlers
+window.addEventListener('keydown', (e) => {
+  if (e.key === 'PageUp') {
+    e.preventDefault();
+    previousPage();
+  } else if (e.key === 'PageDown') {
+    e.preventDefault();
+    nextPage();
+  }
+});
+
 var cm = CodeMirror(document.getElementById("editor"), {
   value: initialPage.code.trim(),
   lineNumbers: true,
   lineWrapping: true,
   tabSize: 2,
   autofocus: true,
-  mode: "ruby"
+  mode: "ruby",
+  extraKeys: {
+    "Shift-Enter": function(cm) {
+      runCode();
+    }
+  }
 });
 
 // Drag bar functionality
