--- a/public/list.html
+++ b/public/list.html
@@ -98,13 +98,9 @@
               </div>
             </a>
           </div>
-        </div>
-
-        <div class="flex flex-col gap-4">
-          <div class="text-xl font-bold">Relationship-Based Access Control (ReBAC)</div>
 
           <div class="bg-indigo-200 px-2 py-4">
-            <a href="/rebac/1">
+            <a href="/rbac/5">
               <div class="text-xl">Resource Ownership</div>
               <div>
                 Learn how to grant additional permissions to resource owners
@@ -113,7 +109,7 @@
           </div>
 
           <div class="bg-indigo-200 px-2 py-4">
-            <a href="/rebac/2">
+            <a href="/rbac/6">
               <div class="text-xl">Resource Sharing</div>
               <div>
                 Learn how to share resources and control access at a granular level
@@ -122,16 +118,20 @@
           </div>
 
           <div class="bg-indigo-200 px-2 py-4">
-            <a href="/rebac/3">
+            <a href="/rbac/7">
               <div class="text-xl">Custom Roles</div>
               <div>
                 Learn how to implement flexible custom roles for different organization needs
               </div>
             </a>
           </div>
+        </div>
+
+        <div class="flex flex-col gap-4">
+          <div class="text-xl font-bold">Relationship-Based Access Control (ReBAC)</div>
 
           <div class="bg-indigo-200 px-2 py-4">
-            <a href="/rebac/4">
+            <a href="/rebac/1">
               <div class="text-xl">Relationship-Based Access Control (ReBAC)</div>
               <div>
                 Learn how to organize permissions based on relationships between resources
@@ -140,7 +140,7 @@
           </div>
 
           <div class="bg-indigo-200 px-2 py-4">
-            <a href="/rebac/5">
+            <a href="/rebac/2">
               <div class="text-xl">Files & Folders</div>
               <div>
                 Learn how to implement hierarchical file/folder permissions
@@ -149,7 +149,7 @@
           </div>
 
           <div class="bg-indigo-200 px-2 py-4">
-            <a href="/rebac/6">
+            <a href="/rebac/3">
               <div class="text-xl">User-Resource Relationships</div>
               <div>
                 Learn how relationships between users and resources affect permissions
@@ -158,7 +158,7 @@
           </div>
 
           <div class="bg-indigo-200 px-2 py-4">
-            <a href="/rebac/7">
+            <a href="/rebac/4">
               <div class="text-xl">Impersonation</div>
               <div>
                 Learn how to implement user impersonation for support and admin scenarios
@@ -167,7 +167,7 @@
           </div>
 
           <div class="bg-indigo-200 px-2 py-4">
-            <a href="/rebac/8">
+            <a href="/rebac/5">
               <div class="text-xl">Organization Hierarchies</div>
               <div>
                 Learn how to implement authorization based on organizational reporting structures
@@ -220,6 +220,19 @@
               <div class="text-xl">Entitlements</div>
               <div>
                 Learn how to implement subscription-based access control with entitlements and quotas
+              </div>
+            </a>
+          </div>
+        </div>
+
+        <div class="flex flex-col gap-4">
+          <div class="text-xl font-bold">Wrapping Up</div>
+
+          <div class="bg-indigo-200 px-2 py-4">
+            <a href="/wrapping-up/1">
+              <div class="text-xl">Wrapping Up</div>
+              <div>
+                Learn where to go next in your authorization journey
               </div>
             </a>
           </div>
